<resources>
    <string name="app_name">Iteso Store</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string-array name="laptops">
        <item>Mac</item>
        <item>Alienware</item>
        <item>Lanix</item>
    </string-array>
    <string-array name="drawables">
        <item>@drawable/mac</item>
        <item>@drawable/alienware</item>
        <item>@drawable/lanix</item>
    </string-array>
    <string name="location">Zapopan</string>
    <string name="phone">3312345678</string>
    <string name="store">Best Buy</string>
    <string name="tab1">HOME</string>
    <string name="tab2">TECHNOLOGY</string>
    <string name="tab3">ELECTRONICS</string>
    <string name="product_image_activity_product">Product Image</string>
    <string name="product_name_activity_product">Product Name</string>
    <string name="store_activity_product">Store</string>
    <string name="location_activity_product">Location</string>
    <string name="phone_activity_product">Phone</string>
    <string name="save_activity_product">Save</string>
    <string name="cancel_activity_product">Cancel</string>
    <string name="splash_screen_text">WELCOME TO ITESO PRODUCTS</string>
    <string name="log_in_button_text">LOG IN</string>
    <string name="action_log_out">Log Out</string>
    <string name="user_name_login_hint">Introduce user name</string>
    <string name="password_login_hint">Introduce password</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="hint_activity_item">Introduce title...</string>
    <string name="save_activity_item">Guardar</string>
</resources>
