<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.iteso.app.ActivityLogin"
    android:padding="@dimen/padding_login_main_wrapper">

    <EditText
        android:id="@+id/et_username_activity_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/user_name_login_hint"
        android:layout_centerVertical="true"/>

    <EditText
        android:id="@+id/et_password_activity_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_below="@id/et_username_activity_login"
        android:hint="@string/password_login_hint"/>

    <Button
        android:id="@+id/btn_log_in_activity_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_button_text"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
</layout>
